--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,10 @@ header .right {
   display: flex;
   align-items: center;
 }
+.sidebar nav > ul > li > a {
+  color: white;
+  text-decoration: none;
+}
 .sidebar nav > ul > li::before {
   font-family: "Material Design Icons";
   font-size: 18px;
@@ -214,4 +218,129 @@ header .right .menu {
 }
 .sidebar nav > ul > li.drop-down-2::before {
   margin: 0 0 -20px -26px;
+}
+main > div {
+  padding: 20px;
+}
+main > div h1 {
+  border-bottom: solid 2px #fe5722;
+}
+main > div table {
+  width: 100%;
+}
+main > div table thead {
+  background-color: #fe57221c;
+}
+main > div table thead tr {
+}
+main > div table thead tr th {
+  padding: 10px;
+}
+main > div table tbody {
+}
+main > div table tbody tr {
+}
+main > div table tbody tr td {
+  padding: 10px;
+  text-align: center;
+}
+.modal,
+.edit-modal {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  top: 0;
+  left: 0;
+  display: none;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal > .form,
+.edit-modal > .form {
+  display: flex;
+  width: 300px;
+  background-color: #fff;
+  padding: 25px;
+  border-radius: 16px;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 15px;
+  position: relative;
+}
+
+.modal > .form input,
+.edit-modal > .form input {
+  font-size: 16px;
+  padding: 8px 16px;
+  border-radius: 8px;
+}
+.modal > .form input[type="text"],
+.edit-modal > .form input[type="text"] {
+  border: solid 1px #bbb;
+  font-size: 14px;
+}
+
+.modal > .form input[type="button"],
+.edit-modal > .form input[type="button"] {
+  background-color: #fe5722;
+  color: #fff;
+  border: none;
+  padding: 16px 32px;
+  cursor: pointer;
+}
+.mdi-close {
+  position: absolute;
+  right: 15px;
+  top: 15px;
+  color: red;
+  font-size: 20px;
+  cursor: pointer;
+}
+main > div > button,
+.top-inputs > button {
+  color: #16283c;
+  font-size: 17px;
+  background-color: #fe5722;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
+  padding: 10px;
+  margin: 10px 1px 13px 1px;
+}
+#users .mdi-delete {
+  color: red;
+  cursor: pointer;
+}
+#users .mdi-account-edit {
+  color: #0590d5;
+  cursor: pointer;
+}
+.loading {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(8, 49, 66);
+  display: none;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  font-size: 24px;
+  z-index: 10000;
+  opacity: 0.8;
+}
+.top-inputs {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row-reverse;
+  align-items: center;
+}
+
+.top-inputs input {
+  height: 30px;
+  border-radius: 8px;
+  border: solid 1px #bbb;
+  padding: 5px;
+  width: 300px;
 }
